Fix z-index issue

--- a/app/assets/stylesheets/user_home.css
+++ b/app/assets/stylesheets/user_home.css
@@ -11,6 +11,7 @@
   justify-content: space-between;
   border-bottom: 1px solid white;
   background-color: rgb(30, 30, 30);
+  z-index: 10;
 }
 
  .home-logo { 
@@ -277,7 +278,7 @@
   border-radius: 6px;
   color: whitesmoke;
   background-color: rgb(49, 49, 49);
-  /* z-index: 2; */
+  z-index: 2;
   
 }
 
